# shortly_rs

./: .env  Cargo.toml  shortly.sqlite3  test.sqlite3
migrations/2019-11-17-183522_create_redirects/: down.sql  up.sql
src/: main.rs
src/hashing/: mod.rs
src/storage/: mod.rs  models.rs  schema.rs
src/storage/sqlite/: mod.rs
src/transport/http/: mod.rs
