[package]
name = "shortly_rs"
version = "0.1.0"
authors = ["williamgough <williamhenrygough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
colored = "1.8.0"
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
harsh = "0.1.6"
time = "0.1.42"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]